gccida/g2/announce_function
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/announce_function/src/diagnostic.c:1545:11: error: use of undeclared identifier 'off_670ADF'
verbatim( off_670ADF, v1); 
          ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/announce_function/src/obj/diagnostic.o] Error 1
